--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Natours | Exciting tours for adventurous people",
   "version": "1.0.0",
   "author": "Ray Bernard <ray.bernard@gmail.com>",
+  "homepage": "https://raybdev.github.io/natours/build/",
   "dependencies": {
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.46",
